--- a/index.html
+++ b/index.html
@@ -10,12 +10,29 @@
 <header class="header">header</header>
 <section class="content">
     <div class="left-column">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet architecto distinctio doloremque et eveniet, explicabo fuga incidunt ipsam molestiae mollitia nemo nisi non officia officiis perferendis perspiciatis, quae quasi quo quos ratione repudiandae sint sunt unde voluptatem! Dolore illum impedit neque quas ullam! Maxime nisi nulla rem repellendus sed.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto corporis deserunt mollitia necessitatibus nihil, provident saepe similique? Impedit iusto modi saepe similique sint? Adipisci commodi minus nihil, possimus quam reprehenderit. Earum modi odit quo vitae. Atque molestias placeat voluptatum.</p>
+        <p class="simple">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet architecto distinctio doloremque et eveniet, explicabo fuga incidunt ipsam molestiae mollitia nemo nisi non officia officiis perferendis perspiciatis, quae quasi quo quos ratione repudiandae sint sunt unde voluptatem! Dolore illum impedit neque quas ullam! Maxime nisi nulla rem repellendus sed.</p>
+        <p class="simple">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto corporis deserunt mollitia necessitatibus nihil, provident saepe similique? Impedit iusto modi saepe similique sint? Adipisci commodi minus nihil, possimus quam reprehenderit. Earum modi odit quo vitae. Atque molestias placeat voluptatum.</p>
     </div>
-    <div class="center-column"></div>
+    <div class="center-column">
+        <article>
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci, dolorem dolores eaque, illo itaque magnam maiores molestias nobis nostrum praesentium quos reiciendis repellendus tenetur!</p>
+        </article>
+        <article>
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci, dolorem dolores eaque, illo itaque magnam maiores molestias nobis nostrum praesentium quos reiciendis repellendus tenetur!</p>
+        </article>
+        <article>
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci, dolorem dolores eaque, illo itaque magnam maiores molestias nobis nostrum praesentium quos reiciendis repellendus tenetur!</p>
+        </article>
+        <article>
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci, dolorem dolores eaque, illo itaque magnam maiores molestias nobis nostrum praesentium quos reiciendis repellendus tenetur!</p>
+        </article>
+    </div>
     <div class="right-column">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, maxime, vero. Alias amet assumenda doloribus nulla odio officia. Accusantium ad adipisci autem cumque debitis dolore dolorem dolores earum est explicabo id iste magni maiores modi nisi nobis non nulla perferendis perspiciatis quas, quisquam reiciendis rem repellendus, sapiente sequi sunt voluptatum? Consectetur nobis praesentium quisquam sed tempore. Alias animi at deserunt ea illum incidunt ipsa mollitia nobis non sapiente, ullam unde.</p>
+        <p class="simple">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, maxime, vero. Alias amet assumenda doloribus nulla odio officia. Accusantium ad adipisci autem cumque debitis dolore dolorem dolores earum est explicabo id iste magni maiores modi nisi nobis non nulla perferendis perspiciatis quas, quisquam reiciendis rem repellendus, sapiente sequi sunt voluptatum? Consectetur nobis praesentium quisquam sed tempore. Alias animi at deserunt ea illum incidunt ipsa mollitia nobis non sapiente, ullam unde.</p>
     </div>
 </section>
 <footer class="footer">footer</footer>
