--- a/index.html
+++ b/index.html
@@ -7,34 +7,44 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="page">
-<header class="header">header</header>
+<header class="header">
+    <img alt="salad" src="img/stephanie-moody-Ftk2WBUIoXI-unsplash-min.jpg">
+    <p class="simple">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius enim eos illo itaque maxime natus officiis quod unde veritatis vitae!
+    </p>
+</header>
 <section class="content">
     <div class="left-column">
-        <p class="simple">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet architecto distinctio doloremque et eveniet, explicabo fuga incidunt ipsam molestiae mollitia nemo nisi non officia officiis perferendis perspiciatis, quae quasi quo quos ratione repudiandae sint sunt unde voluptatem! Dolore illum impedit neque quas ullam! Maxime nisi nulla rem repellendus sed.</p>
+        <p class="simple">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet blanditiis deleniti id in ipsa nostrum repellendus sequi totam ullam, vel!</p>
         <p class="simple">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto corporis deserunt mollitia necessitatibus nihil, provident saepe similique? Impedit iusto modi saepe similique sint? Adipisci commodi minus nihil, possimus quam reprehenderit. Earum modi odit quo vitae. Atque molestias placeat voluptatum.</p>
     </div>
     <div class="center-column">
         <article>
             <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci, dolorem dolores eaque, illo itaque magnam maiores molestias nobis nostrum praesentium quos reiciendis repellendus tenetur!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus facilis minima possimus quibusdam. Fuga, quo.</p>
         </article>
         <article>
             <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci, dolorem dolores eaque, illo itaque magnam maiores molestias nobis nostrum praesentium quos reiciendis repellendus tenetur!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum eveniet illo in ipsam laborum quibusdam repellendus sed vel veniam vero.</p>
         </article>
         <article>
             <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci, dolorem dolores eaque, illo itaque magnam maiores molestias nobis nostrum praesentium quos reiciendis repellendus tenetur!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, delectus eligendi ipsum sequi ut vero?</p>
         </article>
         <article>
             <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci, dolorem dolores eaque, illo itaque magnam maiores molestias nobis nostrum praesentium quos reiciendis repellendus tenetur!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos excepturi natus omnis sit, sunt veniam.</p>
         </article>
     </div>
     <div class="right-column">
         <p class="simple">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, maxime, vero. Alias amet assumenda doloribus nulla odio officia. Accusantium ad adipisci autem cumque debitis dolore dolorem dolores earum est explicabo id iste magni maiores modi nisi nobis non nulla perferendis perspiciatis quas, quisquam reiciendis rem repellendus, sapiente sequi sunt voluptatum? Consectetur nobis praesentium quisquam sed tempore. Alias animi at deserunt ea illum incidunt ipsa mollitia nobis non sapiente, ullam unde.</p>
     </div>
 </section>
-<footer class="footer">footer</footer>
+<footer class="footer">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, magnam nobis repellendus sit voluptate voluptatum?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, magnam nobis repellendus sit voluptate voluptatum?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, magnam nobis repellendus sit voluptate voluptatum?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, magnam nobis repellendus sit voluptate voluptatum?</p>
+</footer>
 </body>
 </html>
