нижние колонки, текст весь вмещается

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </header>
 <section class="content">
     <div class="left-column">
-        <p class="simple">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet blanditiis deleniti id in ipsa nostrum repellendus sequi totam ullam, vel!</p>
-        <p class="simple">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto corporis deserunt mollitia necessitatibus nihil, provident saepe similique? Impedit iusto modi saepe similique sint? Adipisci commodi minus nihil, possimus quam reprehenderit. Earum modi odit quo vitae. Atque molestias placeat voluptatum.</p>
+        <p class="simple">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi cumque deleniti ipsam perferendis quas sapiente sequi sunt temporibus voluptate?</p>
+        <p class="simple">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid animi distinctio esse facere hic laboriosam, officiis perferendis perspiciatis provident sit sunt temporibus tenetur voluptate voluptatem.</p>
     </div>
     <div class="center-column">
         <article>
@@ -37,14 +37,14 @@
         </article>
     </div>
     <div class="right-column">
-        <p class="simple">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, maxime, vero. Alias amet assumenda doloribus nulla odio officia. Accusantium ad adipisci autem cumque debitis dolore dolorem dolores earum est explicabo id iste magni maiores modi nisi nobis non nulla perferendis perspiciatis quas, quisquam reiciendis rem repellendus, sapiente sequi sunt voluptatum? Consectetur nobis praesentium quisquam sed tempore. Alias animi at deserunt ea illum incidunt ipsa mollitia nobis non sapiente, ullam unde.</p>
+        <p class="simple">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aspernatur at aut consequatur cumque debitis, dolorem eveniet exercitationem hic illo ipsam iusto laboriosam minima molestiae molestias obcaecati optio porro possimus praesentium quaerat quam reprehenderit sequi totam unde, voluptatum. Ad animi debitis exercitationem illum inventore nam quidem sed ullam vitae voluptas?</p>
     </div>
 </section>
 <footer class="footer">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, magnam nobis repellendus sit voluptate voluptatum?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, magnam nobis repellendus sit voluptate voluptatum?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, magnam nobis repellendus sit voluptate voluptatum?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, magnam nobis repellendus sit voluptate voluptatum?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur consequuntur cumque excepturi id nam.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet dicta doloribus harum nobis odio quas!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi corporis deserunt doloremque eveniet harum. Distinctio?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis consectetur consequuntur fugit illum laborum.</p>
 </footer>
 </body>
 </html>
