--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </p>
     </header>
     <section class="content">
-      <div class="left-column">
+      <aside class="left-column">
         <p class="simple">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur
           commodi cumque deleniti ipsam perferendis quas sapiente sequi sunt
@@ -27,7 +27,7 @@
           perspiciatis provident sit sunt temporibus tenetur voluptate
           voluptatem.
         </p>
-      </div>
+      </aside>
       <div class="center-column">
         <article>
           <h2>Lorem ipsum dolor sit amet.</h2>
@@ -59,7 +59,7 @@
           </p>
         </article>
       </div>
-      <div class="right-column">
+      <aside class="right-column">
         <p class="simple">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto
           aspernatur at aut consequatur cumque debitis, dolorem eveniet
@@ -68,7 +68,7 @@
           reprehenderit sequi totam unde, voluptatum. Ad animi debitis
           exercitationem illum inventore nam quidem sed ullam vitae voluptas?
         </p>
-      </div>
+      </aside>
     </section>
     <footer class="footer">
       <p>
